# dhcpsrv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  dhcpsrv-launcher.py  dhcpsrv_app.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
src/dhcpsrv/: __init__.py  __main__.py  app.py  config.py  dhcp.py  i18n.py  network.py  platform_win.py  ui.py  update_check.py
tools/: make_icon.ps1
